<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/snackbar" android:layout_width="fill_parent" android:layout_height="fill_parent" app:consumeSystemWindowsInsets="start|end" app:edgeToEdge="true" app:fitSystemWindowsInsets="start|end"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" app:fitSystemWindowsInsets="top|bottom">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
            <RelativeLayout android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="72.0dip" android:layout_marginBottom="10.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip">
                <ImageView android:id="@id/app_icon" android:layout_width="42.0dip" android:layout_height="42.0dip" android:layout_centerVertical="true" android:contentDescription="@string/app_name" android:layout_marginStart="16.0dip" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Title" android:textSize="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:layout_centerVertical="true" android:contentDescription="@string/app_name" android:layout_marginStart="10.0dip" android:layout_toEndOf="@id/app_icon" />
            </RelativeLayout>
            <com.google.android.material.card.MaterialCardView android:id="@id/proxy" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="86.0dip" android:layout_marginTop="10.0dip" android:foreground="?selectableItemBackground" android:layout_marginHorizontal="16.0dip" app:cardBackgroundColor="#ff4caf50" app:cardCornerRadius="8.0dip" app:cardElevation="4.0dip" app:cardPreventCornerOverlap="false">
                <RelativeLayout android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="18.0dip" android:paddingEnd="18.0dip">
                    <ImageView android:id="@id/status_icon" android:layout_width="28.0dip" android:layout_height="28.0dip" android:layout_centerVertical="true" app:srcCompat="@drawable/ic_check_circle" app:tint="?android:textColorPrimaryInverse" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="?android:textColorPrimaryInverse" android:id="@id/status_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="25.0dip" android:layout_toEndOf="@id/status_icon" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="?android:textColorPrimaryInverse" android:id="@id/status_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_below="@id/status_title" android:layout_alignStart="@id/status_title" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView android:id="@id/apps" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:foreground="?selectableItemBackground" android:layout_marginHorizontal="16.0dip" android:outlineSpotShadowColor="#3a000000" android:outlineAmbientShadowColor="#3a000000" app:cardCornerRadius="8.0dip" app:cardElevation="4.0dip" app:cardPreventCornerOverlap="false">
                <RelativeLayout android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="18.0dip" android:paddingEnd="18.0dip">
                    <ImageView android:id="@id/apps_icon" android:layout_width="28.0dip" android:layout_height="28.0dip" android:layout_centerVertical="true" android:contentDescription="@string/Apps" app:srcCompat="@drawable/ic_apps" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:id="@id/apps_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Apps" android:layout_marginStart="25.0dip" android:layout_toEndOf="@id/apps_icon" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="@android:color/darker_gray" android:id="@id/apps_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_below="@id/apps_title" android:layout_alignStart="@id/apps_title" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView android:id="@id/dashboard" android:focusable="true" android:visibility="visible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:foreground="?selectableItemBackground" android:layout_marginHorizontal="16.0dip" android:outlineSpotShadowColor="#3a000000" android:outlineAmbientShadowColor="#3a000000" app:cardCornerRadius="8.0dip" app:cardElevation="4.0dip" app:cardPreventCornerOverlap="false">
                <RelativeLayout android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="18.0dip" android:paddingEnd="18.0dip">
                    <ImageView android:id="@id/dash_icon" android:layout_width="28.0dip" android:layout_height="28.0dip" android:layout_centerVertical="true" android:contentDescription="@string/dash" app:srcCompat="@drawable/ic_info_48" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:id="@id/dash_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dash" android:layout_marginStart="25.0dip" android:layout_toEndOf="@id/dash_icon" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="@android:color/darker_gray" android:id="@id/dash_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/dashsum" android:layout_below="@id/dash_title" android:layout_alignStart="@id/dash_title" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView android:id="@id/settings" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:foreground="?selectableItemBackground" android:layout_marginHorizontal="16.0dip" android:outlineSpotShadowColor="#3a000000" android:outlineAmbientShadowColor="#3a000000" app:cardCornerRadius="8.0dip" app:cardElevation="4.0dip" app:cardPreventCornerOverlap="false">
                <RelativeLayout android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="18.0dip" android:paddingEnd="18.0dip">
                    <ImageView android:id="@id/sett_icon" android:layout_width="28.0dip" android:layout_height="28.0dip" android:layout_centerVertical="true" android:contentDescription="@string/sett" app:srcCompat="@drawable/ic_sett" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:id="@id/sett_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sett" android:layout_marginStart="25.0dip" android:layout_toEndOf="@id/sett_icon" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="@android:color/darker_gray" android:id="@id/sett_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/settsum" android:layout_below="@id/sett_title" android:layout_alignStart="@id/sett_title" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout android:orientation="vertical" android:id="@id/lllog" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_marginHorizontal="10.0dip">
                <ScrollView android:orientation="vertical" android:id="@id/svLOG" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="20.0dip" android:fillViewport="true" android:paddingStart="10.0dip" android:paddingEnd="10.0dip">
                    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:cardCornerRadius="15.0dip" app:cardElevation="0.0dip" app:cardPreventCornerOverlap="true" app:cardUseCompatPadding="false">
                        <TextView android:textSize="12.0sp" android:textStyle="normal" android:id="@id/logStatus" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" />
                    </androidx.cardview.widget.CardView>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>